[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["kuwana-kb <41671293+kuwana-kb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"]}
dotenv = "0.9.0"
